Fri Oct 29 03:50:16 BST 2010  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_new): Default ignore_signals to 0.
	* lib/decompress.c (decompress_open, decompress_fdopen): Remove
	  redundant calls to pipeline_ignore_signals.
	* src/man.c (make_browser): Explicitly ignore SIGINT and SIGQUIT
	  when running the browser.
	  (make_display_command): Explicitly ignore SIGINT and SIGQUIT when
	  running the pager.

Fri Oct 29 03:28:57 BST 2010  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c, lib/pipeline.h: Rename command to pipecmd,
	  command_* to pipecmd_*, and COMMAND_* to PIPECMD_*.  Update all
	  callers.

Fri Oct 29 03:24:10 BST 2010  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/nl.po: Use I<> rather than U<>.

Tue Oct 26 12:43:45 BST 2010  Erwin Poeze  <erwin.poeze@gmail.com>

	* man/po4a/po/nl.po: Update from Translation Project.

Tue Oct 26 12:40:12 BST 2010  Martin Schauer  <Martin.E.Schauer@gmx.de>

	* po/de.po: Update from Translation Project.
	* man/THANKS: Update.

Mon Oct 25 17:59:01 BST 2010  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_install_post_fork): New function.
	  (pipeline_start): Call post-fork handler rather than hardcoding
	  pop_all_cleanups.
	* lib/pipeline.h (pipeline_install_post_fork): Add prototype.

	* src/lexgrog_test.c (main), src/man.c (main), src/manconv_main.c
	  (main), src/mandb.c (main), src/whatis.c (main),
	  src/zsoelim_main.c (main): Install pop_all_cleanups as a post-fork
	  handler.

Mon Oct 25 16:18:08 BST 2010  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (command_unsetenv): New function.
	  (command_dup, command_dump, command_tostring): Check for NULL
	  cmd->env[i].value.
	  (command_start_child): If cmd->env[i].value is NULL, call unsetenv
	  rather than setenv.
	* lib/pipeline.h (command_unsetenv): Add prototype.

Sun Oct 24 23:37:08 BST 2010  Colin Watson  <cjwatson@debian.org>

	Allow building with an external libpipeline.
